# appsAway

./: .gitignore  LICENSE  README.md
.ci/: docker-compose.yml  docker-yarpbasic.yml  docker-yarpgazebo.yml
demos/: README.md
gui/: copyGUIconf.sh  createGUI.sh  main.py
modules/CameraPanCalibration/: CMakeLists.txt  CameraPanCalibration.thrift  CameraPanCalibration.xml  README.md  main.cpp
modules/CameraPanCalibration/app/conf/: config.ini
modules/CameraPanCalibration/app/scripts/: CameraPanCalibration.xml
scripts/: appsAway_addResources.sh  appsAway_changeNewFilesPermissions.sh  appsAway_checkAppRunning.sh  appsAway_checkDocker.sh  appsAway_checkUpdates.sh  appsAway_cleanupCluster.sh  appsAway_containerPermissions.sh  appsAway_copyFiles.sh  appsAway_deployCleanup.sh  appsAway_endApp.sh  appsAway_getVolumeFiles.sh  appsAway_getVolumesFileList.sh  appsAway_guiLaunch.yml  appsAway_registryLaunch.yml  appsAway_scriptRunner.sh  appsAway_setEnvironment.template.sh  appsAway_setupCluster.sh  appsAway_setupGui.sh  appsAway_setupRegistry.sh  appsAway_setupSwarm.sh  appsAway_startApp.sh  appsAway_stopApp.sh  cleanDockerObjs.sh  converter.py  demo.xml  start.sh  testApp.sh
user_changes/: 05-ilaria-carlini-steps.json  12344_AlexAntn.json  12345678_AlexAntn  12345678_AlexAntn.json  1234_AlexAntn.json  1601564794166-AlexAntn-steps.js  1601567694011-AlexAntn-steps.js  1601988659723-AlexAntn-steps.js  1602600159346-vtikha-steps.js  1602601513579-ilaria-carlini-steps.js  1602687958027-ilaria-carlini-steps.js  1602745935741-ilaria-carlini-steps.js  1602746327716-ilaria-carlini-steps.js  1602753154273-ilaria-carlini-steps.js  1602831696049-AlexAntn-steps.js  1602832561865-AlexAntn-steps.js  1602863041401-ilaria-carlini-robots.js  1602863698311-ilaria-carlini-steps.js  1602864692984-ilaria-carlini-steps.js  1602864739718-ilaria-carlini-robots.js  1604079803826-traversaro-robots.js  1605885513711-ilaria-carlini-robots_manager.js  1606727732270-ilaria-carlini-apps.js  1607518545348-maggia80-robots.js  (+186 more)
(+273 files in other folders)
